--- a/newproyectofinal/htmlescomhub/index.html
+++ b/newproyectofinal/htmlescomhub/index.html
@@ -28,7 +28,7 @@
   <!-- Navegación secundaria -->
   <div class="nav-area">
     <div class="nav-links">
-      <a href="carrito.html">Carrito de Compras</a>
+      <a href="carrito.html">Nuestros productos</a>
       <a href="nuevo_producto.html">Registrar Producto</a>
       <a href="login.html">Iniciar Sesión / Registro</a>
     </div>
@@ -73,7 +73,7 @@
     <h2>¡Descubre un mundo de sabores!</h2>
     <p>Desde las clásicas Papas Sol hasta los crujientes Solchesitos y dulces tentaciones como galletas y muffins. Tenemos el snack perfecto para cada momento.</p>
     <p>Explora nuestra variedad y encuentra tus favoritos. ¡Calidad y sabor que te encantarán!</p>
-    <a href="#" class="cta-button">Ver todos los productos</a>
+    <!--<a href="productos.html" class="cta-button">Ver todos los productos</a> -->
   </section>
 
   <script src="js/scripts.js"></script>
