--- a/newproyectofinal/htmlescomhub/contacto.html
+++ b/newproyectofinal/htmlescomhub/contacto.html
@@ -28,7 +28,7 @@
   <!-- Navegación secundaria -->
   <div class="nav-area">
     <div class="nav-links">
-      <a href="carrito.html">Carrito de Compras</a>
+      <a href="carrito.html">Nuestros productos</a>
       <a href="nuevo_producto.html">Registrar Producto</a>
       <a href="login.html">Iniciar Sesión / Registro</a>
     </div>
